# ofxstatement-ru

./: .gitignore  LICENSE  Makefile  README.rst  prospector.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: publish.yaml  tag.yaml  test.yaml
src/ofxstatement_ru/: alfabank.py  avangard.py  raiffeisen.py  sberbank_csv.py  sberbank_txt.py  tinkoff.py  vtb.py
src/tests/: test_alfabank.py  test_raiffeisen.py  test_sberbank_csv.py  test_sberbank_txt.py  test_vtb.py  util.py
src/tests/samples/: raiffeisen.csv
